src/main/resources/archetype-resources/k8s/__artifactId__-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${artifactId}-ingress
  namespace: ${k8s-namespace}
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 600s
    nginx.ingress.kubernetes.io/proxy-send-timeout: 600s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 600s 
    nginx.ingress.kubernetes.io/auth-remove-header: false    
    ingress.kubernetes.io/rewrite-target: /${artifactId}
spec:
   tls:
   - secretName: tls-secret
   rules:
   - http:
       paths:
       - path: /${artifactId}
         backend:
           serviceName: ${artifactId}-service
           servicePort: 8081
